# pytest-datadir-extras

./: .coveragerc  LICENSE  Makefile  README.md  pyproject.toml
src/pytest_datadir_extras/: __about__.py  config.py  factories.py  plugin.py  utils.py
tests/: test_factories.py  test_scoped_datadir.py
