[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-datadir-extras"
description = 'Pytest plugin for cleanly injecting files into your tests. Extra functionality to pytest-datadir.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["testing", "pytest", "pytest-datadir",]
authors = [
  { name = "salotz", email = "salotz@salotz.info" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.entry-points.pytest11]
pytest_datadir_extras = "pytest_datadir_extras.plugin"

[project.urls]
Documentation = "https://github.com/unknown/pytest-datadir-extras#readme"
Issues = "https://github.com/unknown/pytest-datadir-extras/issues"
Source = "https://github.com/unknown/pytest-datadir-extras"

[tool.hatch.version]
path = "src/pytest_datadir_extras/__about__.py"

[tool.hatch.envs.default]

python = "3.10"
dependencies = [
  "pytest",
  "pytest-cov",
  # interactive
  "ipython",
  "pdbpp",
]

# [[tool.hatch.envs.test.matrix]]
# python = ["37", "38", "39", "310", "311"]
